--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div class="form-group">
                         <label for="address">Address:</label>
                         <textarea id="address" name="address" class="form-control"
-                            placeholder="Street Address,city,state"></textarea>><br>
+                            placeholder="Street Address,city,state"></textarea><br>
                     </div>
                     <div class="form-group">
                         <label for="pincode">PIN:</label>
@@ -68,6 +68,7 @@
 
             <div class="col col-sm-12 col-md-12 col-lg-7">
                 <h1>Form details</h1><br>
+                <div class="table-responsive-md">
                 <table class="table table-striped">
                     <thead class="text-white bg-primary">
                         <tr>
@@ -85,7 +86,7 @@
 
                     </tbody>
                 </table>
-
+                </div>
             </div>
         </div>
     </div>
